removed user research tag from sign off tab

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -265,30 +265,30 @@
             <!-- Reporter -->
             <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Reporter flow</h2>        
             <ul class="govuk-list govuk-list--bullet">
-                <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/report/check-your-answers" >Check your answers</a></li>
-                <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  Submit your report (removed)</li>
-                <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/report/confirmation" >Report sent for review</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/check-your-answers" >Check your answers</a></li>
+                <li>Submit your report (removed)</li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/confirmation" >Report sent for review</a></li>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-submitted" >Email: Your report for ((fund_name)) has been sent for review</a></li>
-                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-signed-off" >Email: Your report has been signed off</a></li>                    
-                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-declined" >Email: Your report for ((fund_name)) has been declined</a></li>                    
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-submitted" >Email: Your report for ((fund_name)) has been sent for review</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-signed-off" >Email: Your report has been signed off</a></li>                    
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/reporter/report-declined" >Email: Your report for ((fund_name)) has been declined</a></li>                    
                     
                 </ul>
             </ul>
             <!-- Section 151 Officer -->
             <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Section 151 Officer flow</h2>
             <ul class="govuk-list govuk-list--bullet">            
-                <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/sign-in?userType=Section151" >Sign in</a></li>
-                <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/sign-off/" >Sign off and submit report</a></li>
-                <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/sign-off/reason-for-decline" >Why have you declined this report?</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-in?userType=Section151" >Sign in</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-off/" >Sign off and submit report</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-off/reason-for-decline" >Why have you declined this report?</a></li>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/sign-off/confirmation?reportStatus=Declined" >Report declined</a></li>
-                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/sign-off/confirmation?reportStatus=" >Report signed off and submitted</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-off/confirmation?reportStatus=Declined" >Report declined</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-off/confirmation?reportStatus=" >Report signed off and submitted</a></li>
                 </ul>
-                <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/review-needed" >Email: Review needed: funding progress report for ((organisation_name))</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/review-needed" >Email: Review needed: funding progress report for ((organisation_name))</a></li>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/report-signed-off" >Email: You signed off a report for ((organisation_name))</a></li>
-                    <li><strong class="govuk-tag govuk-tag--purple">User-research</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/report-declined" >Email: You declined a report from ((organisation_name))</a></li>                                    
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/report-signed-off" >Email: You signed off a report for ((organisation_name))</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/sign-off/report-declined" >Email: You declined a report from ((organisation_name))</a></li>                                    
                 </ul>              
             </ul>
         {% endset -%} 
