--- a/app/views/index.html
+++ b/app/views/index.html
@@ -152,43 +152,43 @@
                 <!-- Progress -->
                 <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Programme progress</h3>
                 <ul class="govuk-list govuk-list--bullet">                        
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/progress/completion-date" >What is the financial completion date?</a></li>                
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/progress/activity-completion-date" >What is the activity completion date?</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/progress/practical-completion-date" >What is the practical completion date?</a></li>                        
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/progress/delivery" >How is the delivery of your projects progressing?</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/progress/issues" >Are there any issues affecting the delivery of your projects?</a></li>
-                    <li> <strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/progress/milestones" >Are there any significant milestones or achievements you’d like to tell us about?</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/progress/completion-date" >What is the financial completion date?</a></li>                
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/progress/activity-completion-date" >What is the activity completion date?</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/progress/practical-completion-date" >What is the practical completion date?</a></li>                        
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/progress/delivery" >How is the delivery of your projects progressing?</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/progress/issues" >Are there any issues affecting the delivery of your projects?</a></li>
+                    <li> <a class="govuk-link govuk-link--no-visited-state" href="/report/progress/milestones" >Are there any significant milestones or achievements you’d like to tell us about?</a></li>
                 </ul>
                 <!-- Locations -->
                 <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Project locations</h3>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/" >Projects</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/add-postcode" >Add postcode</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/locations/change-postcode" >Change postcode</a></li>                
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/locations/" >Projects</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/locations/add-postcode" >Add postcode</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/locations/change-postcode" >Change postcode</a></li>                
                 </ul>
                 <!-- RAG -->
                 <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Project RAG ratings</h3>
                 <ul class="govuk-list govuk-list--bullet">                        
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/rag/" >Project RAG ratings</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/rag/rag-examples" >RAG rating examples</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/rag/spend" >What is the spend RAG rating for this project?</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/rag/delivery" >What is the delivery RAG rating for this project?</a></li>
-                    <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/rag/information" >Is there anything you need to tell us about your ratings?</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/rag/" >Project RAG ratings</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/rag/rag-examples" >RAG rating examples</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/rag/spend" >What is the spend RAG rating for this project?</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/rag/delivery" >What is the delivery RAG rating for this project?</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/report/rag/information" >Is there anything you need to tell us about your ratings?</a></li>
                 </ul>
                 <!-- Risks -->
                 <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Risks</h3>                    
-                <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/" >Do you need to add any project risks?</a>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/" >Do you need to add any project risks?</a>
                     <ul class="govuk-list govuk-list--bullet">                        
-                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/" >What is the name of the risk?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/category" >What is the risk category?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/issues" >What might go wrong and what would the outcome be?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/likelihood" >What is the pre-mitigated likelihood score?</a></li>                                
-                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/impact" >What is the pre-mitigated impact score?</a></li>                                
-                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/mitigation" >How will you manage the risk?</a></li>                                
-                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/more" >Do you want to add any more risks?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/funds/reports-risks" >Project risks</a>    
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/" >What is the name of the risk?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/category" >What is the risk category?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/issues" >What might go wrong and what would the outcome be?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/likelihood" >What is the pre-mitigated likelihood score?</a></li>                                
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/impact" >What is the pre-mitigated impact score?</a></li>                                
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/mitigation" >How will you manage the risk?</a></li>                                
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/more" >Do you want to add any more risks?</a></li>
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/funds/reports-risks" >Project risks</a>    
                     </ul>   
-                <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/delete/" >Confirm you want to delete this risk?</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/risks/delete/" >Confirm you want to delete this risk?</a></li>
                                             
                                
             <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
