--- a/app/views/get-monitoring-data/download-data.html
+++ b/app/views/get-monitoring-data/download-data.html
@@ -30,7 +30,7 @@
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
 		<p class="govuk-body">Use the filters to select the data you need.</p>		
-		<p class="govuk-body">You will get all of the data from all projects and programmes if you do not select any filters.</p>
+		<p class="govuk-body">You will get all of the data from all projects and programmes if you do not select any filters</p>
 
 	</div>
 </div>
