--- a/app/views/get-monitoring-data/download-data.html
+++ b/app/views/get-monitoring-data/download-data.html
@@ -60,7 +60,7 @@
 					
 					<div class="govuk-accordion__section">
 						<div class="govuk-accordion__section-header">
-							<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-1">Filter by funds</span></h2>
+							<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-1">Grant and fund</span></h2>
 						</div>
 						<div id="accordion-default-content-1" class="govuk-accordion__section-content">
 							<p class="govuk-body">This is example content for section.</p>
@@ -70,7 +70,7 @@
 				  	
 					<div class="govuk-accordion__section">
 						<div class="govuk-accordion__section-header">
-					  		<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-2">Filter by regions</span></h2>
+					  		<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-2">Region</span></h2>
 						</div>
 						<div id="accordion-default-content-2" class="govuk-accordion__section-content">
 							
@@ -81,7 +81,7 @@
 				  	
 					<div class="govuk-accordion__section">
 						<div class="govuk-accordion__section-header">
-					  		<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-3">Filter by funded organisation</span></h2>
+					  		<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-3">Organisation organisation</span></h2>
 						</div>
 						<div id="accordion-default-content-3" class="govuk-accordion__section-content">
 					    	{% include "includes/find/organisation-filter.html" %}
@@ -90,7 +90,7 @@
 				  	
 					<div class="govuk-accordion__section">
 						<div class="govuk-accordion__section-header">
-							<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-4">Filter by outcomes</span></h2>
+							<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-4">Outcome</span></h2>
 						</div>
 						<div id="accordion-default-content-4" class="govuk-accordion__section-content">
 							{% include "includes/find/outcomes-filter.html" %}
@@ -99,7 +99,7 @@
 				  
 				  	<div class="govuk-accordion__section">
 					  	<div class="govuk-accordion__section-header">
-					  		<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-4">Filter by return periods</span></h2>
+					  		<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-4">Return period</span></h2>
 						</div>
 					    <div id="accordion-default-content-4" class="govuk-accordion__section-content">
 							<p class="govuk-body">Each quarter is inclusive and up to the end of the month.</p>
