Changed filter name

--- a/app/views/get-monitoring-data/download-data.html
+++ b/app/views/get-monitoring-data/download-data.html
@@ -60,7 +60,7 @@
 					
 					<div class="govuk-accordion__section">
 						<div class="govuk-accordion__section-header">
-							<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-1">Grant and fund</span></h2>
+							<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-1">Grant</span></h2>
 						</div>
 						<div id="accordion-default-content-1" class="govuk-accordion__section-content">
 							<p class="govuk-body">This is example content for section.</p>
