Updated a filter name

--- a/app/views/get-monitoring-data/download-data.html
+++ b/app/views/get-monitoring-data/download-data.html
@@ -81,7 +81,7 @@
 				  	
 					<div class="govuk-accordion__section">
 						<div class="govuk-accordion__section-header">
-					  		<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-3">Organisation organisation</span></h2>
+					  		<h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default-heading-3">Organisation</span></h2>
 						</div>
 						<div id="accordion-default-content-3" class="govuk-accordion__section-content">
 					    	{% include "includes/find/organisation-filter.html" %}
