--- a/app/views/get-monitoring-data/download-data.html
+++ b/app/views/get-monitoring-data/download-data.html
@@ -41,6 +41,8 @@
 
 		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 		
+		<div class="govuk-grid-row">
+			<div class="govuk-grid-column-one-third">
 		
 				<!-- {{ govukAccordion({
 		  	  		id: "accordion-default",
