added autocomplete in

--- a/app/views/get-monitoring-data/download-data.html
+++ b/app/views/get-monitoring-data/download-data.html
@@ -28,9 +28,11 @@
 
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
-
-		<p class="govuk-body">Use the filters to select the data you need.</p>		
-		<p class="govuk-body">You will get all of the data from all projects and programmes if you do not select any filters.</p>
+		
+		<h2 class="govuk-heading-s">Filters</h2>
+		<p class="govuk-body">Use the filters to select the data you need.</p>						
+		<p class="govuk-body">If you do not select any filters, you will get all of the data from all projects and programmes.</p>
+		
 
 	</div>
 </div>
@@ -39,7 +41,7 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-full">
 
-		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+		
 		
 		<div class="govuk-grid-row">
 			<div class="govuk-grid-column-one-third">
