--- a/app/views/includes/find/funds-filter.html
+++ b/app/views/includes/find/funds-filter.html
@@ -1,6 +1,6 @@
 {{ govukCheckboxes({
   name: "fundFilter",
-  classes: "govuk-checkboxes--small govuk-radios--inline",
+  classes: "govuk-checkboxes--small",
   fieldset: {  legend: { text: "Which types of fund?", isPageHeading: false, classes: "govuk-visually-hidden" } },
   hint: { text: "Select all that apply" },
   items: [
