--- a/app/views/includes/find/organisation-filter.html
+++ b/app/views/includes/find/organisation-filter.html
@@ -1,4 +1,134 @@
-{{ govukCheckboxes({
+{{ xGovukAutocomplete({
+  id: "country",
+  name: "country",
+  allowEmpty: false,
+  label: {
+    classes: "govuk-label govuk-visually-hidden",
+    isPageHeading: false,
+    text: "Which organisation"
+  },
+  items: [
+  { value: "1", text: "Amber Valley Borough Council" },
+  { value: "1", text: "Ashfield District Council" },
+  { value: "1", text: "Barnsley Metropolitan Borough Council" },
+  { value: "1", text: "Bedford Borough Council" },
+  { value: "1", text: "Blackburn with Darwen Borough Council" },
+  { value: "1", text: "Blackpool Borough Council" },
+  { value: "1", text: "Bolton Council" },
+  { value: "1", text: "Boston Borough Council" },
+  { value: "1", text: "Bournemouth, Christchurch and Poole Council" },
+  { value: "1", text: "Bradford Council" },
+  { value: "1", text: "Broxtowe Borough Council" },
+  { value: "1", text: "Buckinghamshire Council" },
+  { value: "1", text: "Calderdale Council" },
+  { value: "1", text: "Charnwood Borough Council" },
+  { value: "1", text: "Cheshire East Council" },
+  { value: "1", text: "Cheshire West and Chester Council" },
+  { value: "1", text: "Chesterfield Borough Council" },
+  { value: "1", text: "City of Lincoln Council" },
+  { value: "1", text: "City of Wolverhampton Council" },
+  { value: "1", text: "Colchester City Council" },
+  { value: "1", text: "Cornwall Council" },
+  { value: "1", text: "Crawley Borough Council" },
+  { value: "1", text: "Cumberland Council" },
+  { value: "1", text: "Darlington Borough Council" },
+  { value: "1", text: "Derby City Council" },
+  { value: "1", text: "Doncaster Council" },
+  { value: "1", text: "Dover District Council" },
+  { value: "1", text: "Dudley Metropolitan Borough Council" },
+  { value: "1", text: "Durham County Council" },
+  { value: "1", text: "East Lindsey District Council" },
+  { value: "1", text: "East Riding of Yorkshire Council" },
+  { value: "1", text: "East Staffordshire Borough Council" },
+  { value: "1", text: "East Suffolk Council" },
+  { value: "1", text: "Erewash Borough Council" },
+  { value: "1", text: "Fenland District Council" },
+  { value: "1", text: "Fylde Council" },
+  { value: "1", text: "Great Yarmouth Borough Council" },
+  { value: "1", text: "Halton Borough Council" },
+  { value: "1", text: "Harlow District Council" },
+  { value: "1", text: "Hartlepool Borough Council" },
+  { value: "1", text: "Hastings Borough Council" },
+  { value: "1", text: "Herefordshire Council" },
+  { value: "1", text: "High Peak Borough Council" },
+  { value: "1", text: "Huntingdonshire District Council" },
+  { value: "1", text: "Ipswich Borough Council" },
+  { value: "1", text: "King&#39;s Lynn and West Norfolk" },
+  { value: "1", text: "Kirklees Council" },
+  { value: "1", text: "Leeds Council" },
+  { value: "1", text: "Lewes District Council" },
+  { value: "1", text: "London Borough of Haringey" },
+  { value: "1", text: "London Borough of Harrow" },
+  { value: "1", text: "London Borough of Sutton Council" },
+  { value: "1", text: "London Borough of Wandsworth" },
+  { value: "1", text: "Mansfield District Council" },
+  { value: "1", text: "Medway Council" },
+  { value: "1", text: "Middlesbrough Council" },
+  { value: "1", text: "Milton Keynes City Council" },
+  { value: "1", text: "Newark and Sherwood District Council" },
+  { value: "1", text: "Newcastle-under-Lyme Borough Council" },
+  { value: "1", text: "North Devon Council" },
+  { value: "1", text: "North East Derbyshire District Council" },
+  { value: "1", text: "North East Lincolnshire Council" },
+  { value: "1", text: "North Lincolnshire Council" },
+  { value: "1", text: "North Northamptonshire Council" },
+  { value: "1", text: "Northumberland County Council" },
+  { value: "1", text: "North Yorkshire Council" },
+  { value: "1", text: "Norwich City Council" },
+  { value: "1", text: "Nottingham City Council" },
+  { value: "1", text: "Nuneaton and Bedworth" },
+  { value: "1", text: "Nuneaton &amp; Bedworth Borough Council" },
+  { value: "1", text: "Oldham Metropolitan Borough Council" },
+  { value: "1", text: "Pendle Borough Council" },
+  { value: "1", text: "Peterborough City Council" },
+  { value: "1", text: "Plymouth City Council" },
+  { value: "1", text: "Portsmouth City Council" },
+  { value: "1", text: "Preston City Council" },
+  { value: "1", text: "Redcar &amp; Cleveland Borough Council" },
+  { value: "1", text: "Redditch Borough Council " },
+  { value: "1", text: "Rochdale Borough Council" },
+  { value: "1", text: "Rotherham Metropolitan Borough Council" },
+  { value: "1", text: "Royal Borough of Greenwich" },
+  { value: "1", text: "Sandwell Council" },
+  { value: "1", text: "Sefton Metropolitan Borough Council" },
+  { value: "1", text: "Sheffield City Council" },
+  { value: "1", text: "Somerset Council" },
+  { value: "1", text: "South Gloucestershire Council" },
+  { value: "1", text: "South Kesteven District Council" },
+  { value: "1", text: "South Ribble Borough Council" },
+  { value: "1", text: "South Tyneside Council" },
+  { value: "1", text: "Southwark Council" },
+  { value: "1", text: "Stafford Borough Council" },
+  { value: "1", text: "Stevenage Borough Council" },
+  { value: "1", text: "St Helens Borough Council" },
+  { value: "1", text: "Stockport Metropolitan Borough Council" },
+  { value: "1", text: "Stockton-on-Tees Borough Council" },
+  { value: "1", text: "Stockton-On-Tees Borough Council" },
+  { value: "1", text: "Sunderland City Council" },
+  { value: "1", text: "Swindon Borough Council" },
+  { value: "1", text: "Tamworth Borough Council" },
+  { value: "1", text: "Teignbridge District Council" },
+  { value: "1", text: "Telford &amp; Wrekin Council " },
+  { value: "1", text: "Thanet District Council" },
+  { value: "1", text: "Thurrock Borough Council" },
+  { value: "1", text: "Torbay Council" },
+  { value: "1", text: "Trafford Council" },
+  { value: "1", text: "Wakefield Metropolitan Borough Council" },
+  { value: "1", text: "Walsall Council" },
+  { value: "1", text: "Warrington Borough Council" },
+  { value: "1", text: "Warwick District Council" },
+  { value: "1", text: "Westmorland &amp; Furness Council " },
+  { value: "1", text: "West Northamptonshire Council" },
+  { value: "1", text: "Wigan Council" },
+  { value: "1", text: "Wiltshire Council" },
+  { value: "1", text: "Wirral Council" },
+  { value: "1", text: "Worcester City Council" },
+  { value: "1", text: "Wyre Forest District Council" }
+  ]
+}) }}
+
+
+<!-- {{ govukCheckboxes({
   name: "organisationFilter",
   classes: "govuk-checkboxes--small",
   fieldset: {  legend: { text: "Which types of fund?", isPageHeading: false, classes: "govuk-visually-hidden" } },
@@ -121,7 +251,7 @@
   { value: "1", text: "Worcester City Council" },
   { value: "1", text: "Wyre Forest District Council" }
   ]
-}) }}
+}) }} -->
 
 
 
