--- a/app/views/get-monitoring-data/download-data.html
+++ b/app/views/get-monitoring-data/download-data.html
@@ -690,26 +690,90 @@
 							heading: { text: "Return period" },
 							content: { 
 								html: 
-								'<div class="govuk-form-group">
+								'
+								<p class="govuk-body">Each return period is inclusive and up to the end of the month.</p>
+								<div class="govuk-form-group">
 									<fieldset class="govuk-fieldset">
-										<legend class="govuk-fieldset__legend govuk-visually-hidden"><h1 class="govuk-fieldset__heading">Return period</h1></legend>
-										<div id="grant-hint" class="govuk-hint">Select all that apply</div>
-										<div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
-											<div class="govuk-checkboxes__item">
-												<input class="govuk-checkboxes__input" id="grant" name="grant" type="checkbox" value="High Street Fund">
-												<label class="govuk-label govuk-checkboxes__label" for="grant">High Street Fund</label>
+										<legend class="govuk-fieldset__legend govuk-fieldset__legend--s"><h3 class="govuk-fieldset__heading">From</h3></legend>									  									 
+									  	<div class="govuk-radios govuk-radios--small" data-module="govuk-radios">
+											<div class="govuk-radios__item">
+										  		<input class="govuk-radios__input" id="period" name="period" type="radio" value="england">
+										  		<label class="govuk-label govuk-radios__label" for="period">April to June</label>
 											</div>
-											<div class="govuk-checkboxes__item">
-												<input class="govuk-checkboxes__input" id="grant-2" name="grant" type="checkbox" value="Pathfinders">
-												<label class="govuk-label govuk-checkboxes__label" for="grant-2">Pathfinders</label>
+											<div class="govuk-radios__item">
+										  		<input class="govuk-radios__input" id="period-2" name="period" type="radio" value="scotland">
+										  		<label class="govuk-label govuk-radios__label" for="period-2">July to September</label>
 											</div>
-											<div class="govuk-checkboxes__item">
-												<input class="govuk-checkboxes__input" id="grant-3" name="grant" type="checkbox" value="Town Deal">
-												<label class="govuk-label govuk-checkboxes__label" for="grant-3">Town Deal</label>
-											</div>											
-										</div>
+											<div class="govuk-radios__item">
+										  		<input class="govuk-radios__input" id="period-3" name="period" type="radio" value="wales">
+										  		<label class="govuk-label govuk-radios__label" for="period-3">October to December</label>
+											</div>
+											<div class="govuk-radios__item">
+										  		<input class="govuk-radios__input" id="period-4" name="period" type="radio" value="northern-ireland">
+										  		<label class="govuk-label govuk-radios__label" for="period-4">January to March</label>
+											</div>
+									  	</div>
+
+									  	<div class="govuk-form-group govuk-!-margin-top-3">
+											<label class="govuk-label govuk-label--s" for="sort">Year</label>
+											<select class="govuk-select" id="sort" name="sort">
+										  		<option value="2024" selected>2024</option>
+										  		<option value="2023">2023</option>
+										  		<option value="2022">2022</option>
+										  		<option value="2021">2021</option>
+											</select>
+									  	</div>
 									</fieldset>
-								</div>'
+								</div>
+
+
+								<details class="govuk-details">
+									<summary class="govuk-details__summary">
+									  <span class="govuk-details__summary-text">
+										To financial quarter
+									  </span>
+									</summary>
+									<div class="govuk-details__text">
+									  
+								<div class="govuk-form-group">
+									<fieldset class="govuk-fieldset">
+										<legend class="govuk-fieldset__legend govuk-fieldset__legend--s"><h3 class="govuk-fieldset__heading">To</h3></legend>									  									 
+									  	<div class="govuk-radios govuk-radios--small" data-module="govuk-radios">
+											<div class="govuk-radios__item">
+										  		<input class="govuk-radios__input" id="period" name="period" type="radio" value="england">
+										  		<label class="govuk-label govuk-radios__label" for="period">April to June</label>
+											</div>
+											<div class="govuk-radios__item">
+										  		<input class="govuk-radios__input" id="period-2" name="period" type="radio" value="scotland">
+										  		<label class="govuk-label govuk-radios__label" for="period-2">July to September</label>
+											</div>
+											<div class="govuk-radios__item">
+										  		<input class="govuk-radios__input" id="period-3" name="period" type="radio" value="wales">
+										  		<label class="govuk-label govuk-radios__label" for="period-3">October to December</label>
+											</div>
+											<div class="govuk-radios__item">
+										  		<input class="govuk-radios__input" id="period-4" name="period" type="radio" value="northern-ireland">
+										  		<label class="govuk-label govuk-radios__label" for="period-4">January to March</label>
+											</div>
+									  	</div>
+
+									  	<div class="govuk-form-group">
+											<label class="govuk-label" for="sort">Year</label>
+											<select class="govuk-select" id="sort" name="sort">
+										  		<option value="2024" selected>2024</option>
+										  		<option value="2023">2023</option>
+										  		<option value="2022">2022</option>
+										  		<option value="2021">2021</option>
+											</select>
+									  	</div>
+
+									</fieldset>
+								</div> 		
+								
+								
+									</div>
+								  </details>
+								  '
 							}
 					  	}
 					]
